[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/CSS/CharacterDisplay.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://characters/CharacterMaterial.tres" type="Material" id=3]

[node name="Control" type="VBoxContainer"]
margin_right = 287.0
margin_bottom = 459.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
alignment = 1
script = ExtResource( 1 )

[node name="PlayerLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 185.0
margin_right = 287.0
margin_bottom = 196.0
text = "P1"
align = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
material = ExtResource( 3 )
margin_top = 197.0
margin_right = 287.0
margin_bottom = 261.0
rect_min_size = Vector2( 64, 64 )
expand = true
stretch_mode = 4

[node name="CharacterLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 262.0
margin_right = 287.0
margin_bottom = 273.0
align = 1
